# LogLens_Plus

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml
examples/: README.md  anomaly_detection_example.py  anomaly_detection_quickstart.py  bi_queries_example.py  bi_query_reference.py  cli-demo-placeholder.md  cli_usage.md  config_example.yaml  config_usage.md  create_cli_demo.sh  dashboard.py  metrics_example.py  metrics_quick_reference.py  storage_example.py  workflow_demo.py
loglens/: __init__.py  models.py
loglens/analytics/: __init__.py  anomaly_detector.py  metrics.py
loglens/cli/: __init__.py  main.py
loglens/ingestion/: __init__.py  ingestor.py
loglens/processing/: __init__.py  window_processor.py
loglens/storage/: SCHEMA.md  __init__.py  database.py  helpers.py  query.py
loglens/utils/: __init__.py  config.py
tests/: README.md  __init__.py  test_anomaly_detection.py  test_ingestion.py  test_metrics.py
